--- a/sellByVue/index.html
+++ b/sellByVue/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>sellbyvue</title>
+    <!-- 移动端viewport设置 -->
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,
+    minimum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" href="/static/reset.css">
   </head>
   <body>
     <div id="app"></div>
